--- a/src/views/footer.pug
+++ b/src/views/footer.pug
@@ -32,9 +32,9 @@ html
 			ul(class="ftext")
 				H2 SOCIAL
 				li(href="view") 
-				img(src="/../img/twitter.png" id="social")
-				img(src="/../img/facebook.png" id="social")
-				img(src="/../img/instagram.png" id="social")
+				img(src="/../img/twitter.png" id="social" href='/sdfsdf')
+				img(src="/../img/facebook.png" id="social" href='/sdfs')
+				img(src="/../img/instagram.png" id="social" href='/no')
 
 
 				//- img(src="/../img/social media.png" id="logo")
