--- a/src/views/header.pug
+++ b/src/views/header.pug
@@ -13,3 +13,4 @@ html
 				img(src="/../img/logo.png" id="logo")
 				a(href='/') About
 				a(href="view") How it works
+				img(src="/../img/user.png" id="userid")
