--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,6 +67,12 @@ a{
   float: left;
 }
 
+#userid{
+  width: 4%;
+  /*float: left;*/
+}
+
+
 /*header / homepage*/
 
 .formField{
@@ -131,7 +137,7 @@ a{
   left: 0px;
   width: -webkit-fill-available;
   text-align: center;
-  margin: 60px -8px 0px -8px;
+  margin: 60px -8px 0px -70px;
 }
 
 .ftext{
