updated routes Randy

--- a/views/bulletin.pug
+++ b/views/bulletin.pug
@@ -12,7 +12,7 @@ html
 
 		h1 Welcome: #{user.username}
 		p
-			a(href="/postmessage" class="links") Post a new message? 
+			a(href="/event/postmessage" class="links") Post a new message? 
 		h1 Messages
 		each message in messages
 			p  
