--- a/views/login.pug
+++ b/views/login.pug
@@ -6,7 +6,7 @@ html
 		body
 			include navbar.pug
 			h1 Log in to see the posts.
-			form(class="forms" method="POST" action="/login")
+			form(class="forms" method="POST" action="/user/login")
 				br
 				|
 				input(type="text" placeholder="username" name="username") 
