--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -4,20 +4,20 @@ nav
 			a(href="/" class="links") Home
 		li.nav
 			if (user)
-				a(href="/profile" class="links") #{user.username}
+				a(href="/user/profile" class="links") #{user.username}
 		li.nav
 			if (!user)
-				a(href="/signup" class="links") Sign Up!
+				a(href="/user/signup" class="links") Sign Up!
 		li.nav
 			if (!user)
-				a(href="/login" class="links") Log in
+				a(href="/user/login" class="links") Log in
 		li.nav
 			if (user)
-				a(href="/bulletin" class="links") See Bulletin
+				a(href="/event/bulletin" class="links") See Bulletin
 		li.nav
 			if (user)
-				a(href="/postmessage" class="links") Post your message!	
+				a(href="/event/postmessage" class="links") Post your message!	
 		li.nav
 			if (user)
-				form(class="forms" method="POST" action="/logout")
+				form(class="forms" method="POST" action="/user/logout")
 					button(type='submit') Logout
