--- a/views/profile.pug
+++ b/views/profile.pug
@@ -14,7 +14,7 @@ html
 				input(type="file" placeholder="Upload Picture" name="file")
 				input(type="submit" placeholder="submit" name="submit")
 		p
-			a(href="/postmessage" class="links") Post a new message? 
+			a(href="/event/postmessage" class="links") Post a new message? 
 		h1 Messages
 		each message in messages
 			p  
