--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,4 +1,3 @@
-doctype html
 html
 	head
 		link(rel='stylesheet', href='/css/main.css', type='text/css')
@@ -6,9 +5,8 @@ html
 		script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
 		link(href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel = "stylesheet")
 
-	title Welcome
-	style
-	style(type='text/css').
+	title SPOTT'R
+
 	body
 		include header.pug
 
