--- a/views/bulletin.pug
+++ b/views/bulletin.pug
@@ -6,9 +6,9 @@ html
 				crossorigin="anonymous")
 	title Blog
 	style
-		include pug.css
+		include main.css
 	body
-		include navbar.pug
+		include header.pug
 
 		h1 Welcome: #{user.username}
 		p
