--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,10 +1,9 @@
-doctype html
 html
 	head
-		link(rel='stylesheet', href='/css/main.css', type='text/css')
 
 	title Welcome
-	style(type='text/css').
+	style
+		include main.css
 
 	body
 		footer(class="footer")
@@ -32,9 +31,9 @@ html
 			ul(class="ftext")
 				H2 SOCIAL
 				li(href="view") 
-				img(src="/../img/twitter.png" id="social" href='/sdfsdf')
-				img(src="/../img/facebook.png" id="social" href='/sdfs')
-				img(src="/../img/instagram.png" id="social" href='/no')
+				img(src="/images/twitter.png" id="social" href='/sdfsdf')
+				img(src="/images/facebook.png" id="social" href='/sdfs')
+				img(src="/images/instagram.png" id="social" href='/no')
 
 
 				//- img(src="/../img/social media.png" id="logo")
