--- a/views/logout.pug
+++ b/views/logout.pug
@@ -2,6 +2,6 @@ html
 	head
 		title Login
 		style
-			include pug.css
+			include main.css
 		body
-			include navbar.pug		
+			include header.pug		
