--- a/views/postmessage.pug
+++ b/views/postmessage.pug
@@ -2,9 +2,9 @@ html
 	head
 		title Post your message
 		style
-			include pug.css
+			include main.css
 		body
-			include navbar.pug
+			include header.pug
 			h1 Welcome: #{user.username}
 			h1 What is your message:
 			form(class="forms" method="POST" action="/event/postmessage")
@@ -15,3 +15,5 @@ html
 				br
 				br
 				input(type="submit" value="send!")
+
+			include footer.pug
