--- a/views/signup.pug
+++ b/views/signup.pug
@@ -3,11 +3,11 @@ html
 		script(src="https://code.jquery.com/jquery-3.2.1.js"
 				integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
 				crossorigin="anonymous")
-	title signup
+	title Signup
 	style
-		include pug.css
+		include main.css
 	body
-		include navbar.pug
+		include header.pug
 		h1 Welcome, new user. 
 		h2 Please sign up to send a message:
 		form(class="forms" method="POST" action="/user/signup")
@@ -21,6 +21,8 @@ html
 			input(type="password" placeholder="Confirm password" id="password2" name="password2")
 			br
 			input(type="submit" value="Signup!")
+
+		include footer.pug
 		script.
 			$(document).ready(function() {
 				$(".forms").submit(function(event){
