--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,7 +38,7 @@ ul{
   margin: 0 auto;
   width: 100%;
   text-align: right;
-  padding: 0px 0px 15px 0px;
+  padding: 0px 0px 5px 0px;
 }
 
 p{
@@ -55,6 +55,7 @@ a{
   font-family: avenir;
   margin-top: 30px;
   display: inline-block;
+  vertical-align: top;
 
 }
 
@@ -63,13 +64,28 @@ a{
 }
 
 #logo{
-  width: 20%;
+  width: 15%;
   float: left;
 }
 
 #userid{
-  width: 4%;
-  /*float: left;*/
+  width: 50px;
+  padding: 15px 25px 0px 0px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
 }
 
 
@@ -119,7 +135,7 @@ a{
   font-size: 2vw;
   font-style: italic;
   padding: 1em 0em 0em 12em;
-  font-weight: 600;
+  font-weight: 550;
 
 }
 
