--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,20 +1,33 @@
 html
 	head
+		link(rel='stylesheet', href='/css/main.css', type='text/css')
 		script(src="https://code.jquery.com/jquery-3.2.1.js"
 				integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
 				crossorigin="anonymous")
 	title Profile
-	style
-		include main.css
+	style(type='text/css').
+		p{
+			text-align: center !important;
+		}
+
+		#new{
+			padding: 5px 50px 5px 50px;
+			border: 5px dotted #4E6D56;
+		}
+
+		.fnav{
+				bottom:0;
+			}
+
 	body
 		include header.pug
 
 		h1 Welcome: #{user.username} 
-			form(action="/images" method="POST" enctype="multipart/form-data")
+			form(action="/images" method="POST" enctype="multipart/form-data" style="padding-top:25px;")
 				input(type="file" placeholder="Upload Picture" name="file")
 				input(type="submit" placeholder="submit" name="submit")
 		p
-			a(href="/event/postmessage" class="links") Post a new message? 
+			a(href="/event/postmessage" class="links" id="new") Post a new message? 
 		h1 Messages
 		each message in messages
 			p  
