--- a/views/signup.pug
+++ b/views/signup.pug
@@ -6,6 +6,10 @@ html
 				crossorigin="anonymous")
 	title Signup
 	style(type='text/css').
+		.fnav{
+				bottom:0;
+			}
+
 		input{
 			padding: 5px 10px 5px 10px;
 			margin: 5px 0px 15px 0px;
@@ -17,7 +21,8 @@ html
 		}
 
 		h3{
-		padding: 20px 0px 20px 150px;
+		padding: 20px 0px 40px 0px;
+		text-align:center;
 		}
 
 		.forms{
