--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,10 @@ body{
   font-family: avenir;
 }
 
+button{
+  margin: 30px 50px 0px 0px;
+}
+
 nav{
   border-bottom: 1px solid white;
   border-top: 1px solid white;
@@ -23,6 +27,7 @@ nav{
 h1{
   text-align: center;
   padding-top: 10%;
+  font-family: bnregular;
 }
 
 h2{
@@ -67,7 +72,7 @@ a{
 /*src="images/logo.png"*/
 
 #logo{
-  background-image: url('/images/logo.png');
+  /*background-image: url('/images/logo.png');*/
   width: 15%;
   float: left;
 }
@@ -157,7 +162,7 @@ a{
   left: 0px;
   width: -webkit-fill-available;
   text-align: center;
-  margin: 60px -8px 0px -70px;
+  margin: 60px -20px -25px -70px;
 }
 
 .ftext{
