--- a/views/login.pug
+++ b/views/login.pug
@@ -3,6 +3,9 @@ html
 		link(rel='stylesheet', href='/css/main.css', type='text/css')
 		title Login
 		style(type='text/css').
+			.fnav{
+				bottom:0;
+			}
 			input{
 				padding: 5px 10px 5px 10px;
 				margin: 5px 0px 15px 0px;
