--- a/views/logout.pug
+++ b/views/logout.pug
@@ -1,7 +1,7 @@
 html
 	head
+		link(rel='stylesheet', href='/css/main.css', type='text/css')
 		title Login
 		style
-			include main.css
 		body
 			include header.pug		
