--- a/views/profile.pug
+++ b/views/profile.pug
@@ -27,8 +27,8 @@ html
 				input(type="file" placeholder="Upload Picture" name="file")
 				input(type="submit" placeholder="submit" name="submit")
 		p
-			a(href="/event/postmessage" class="links" id="new") Post a new message? 
-		h1 Messages
+			a(href="/event/createActivity" class="links" id="new") Post a new message? 
+		h1 Activities
 		each message in messages
 			p  
 			br 
