--- a/views/signup.pug
+++ b/views/signup.pug
@@ -44,7 +44,7 @@ html
 			p Enter a Username: 
 			input(type="text" placeholder="Username" name="username")
 			p Enter an email address: 
-			input(type="text" placeholder="Email" name="email")
+			input(type="email" placeholder="Email" name="email")
 			p Enter a password: 
 			input(type="password" placeholder="Password" id="password" name="password")
 			p Confirm password: 
