--- a/public/css/main.css
+++ b/public/css/main.css
@@ -158,7 +158,7 @@ a{
 
 .fnav{
   background-color: #4E6D56;
-  position: absolute;
+  position: relative;
   left: 0px;
   width: -webkit-fill-available;
   text-align: center;
