--- a/views/index.pug
+++ b/views/index.pug
@@ -31,10 +31,10 @@ html
 
 	div
 		div(class='hBlock') 
-			form(method='POST' action='/dropMessage' class='formField')
+			form(method='POST' action="/event/activityList" class='formField')
 				img(src="images/texthomepage.png" id="texthp")
-				input(type='text' id='searchBar' name='title' placeholder='Where do you want to meet up?')
-				p(id='slogan') Because memories are made together.
+				input(type='text' id='searchBar' placeholder='Where do you want to meet up?' name='title')
+				p(id='slogan') BECAUSE MEMORIES ARE MADE TOGETHER
 	img(src="images/worldmap.png" id="wmap")
 
 
