create table if not exist

--- a/views/activityList.pug
+++ b/views/activityList.pug
@@ -43,7 +43,7 @@ html
 	body
 		include header.pug
 
-		h1 Welcome: #{user.username}
+		//- h1 Welcome: #{user.username}
 		p
 			a(href="/event/createActivity" class="links" id="new") Create a new activity? 
 		h1.tOne Activities
