--- a/views/createActivity.pug
+++ b/views/createActivity.pug
@@ -29,7 +29,7 @@ html
 
 		body
 			include header.pug
-			h1 Welcome: #{user.username}
+			//- h1 Welcome: #{user.username}
 			h2#yourActivity Create Activity: 
 			form(class="forms" method="POST" action="/event/createActivity")
 				|Choose City:
