--- a/views/index.pug
+++ b/views/index.pug
@@ -34,7 +34,7 @@ html
 			form(method='POST' action="/event/activityList" class='formField')
 				img(src="images/texthomepage.png" id="texthp")
 				input(type='text' id='searchBar' placeholder='Where do you want to meet up?' name='title')
-				p(id='slogan') BECAUSE MEMORIES ARE MADE TOGETHER
+				p(id='slogan') Because memories are made together.
 	img(src="images/worldmap.png" id="wmap")
 
 
