--- a/views/footer.pug
+++ b/views/footer.pug
@@ -6,29 +6,30 @@ html
 	style
 
 	body
-		footer(class="footer")
-		nav(class="fnav")
-			ul(class="ftext")
-				h2 SPOTT'R
-				li(href='/') About
-				li(href="view") How it works
-				li(href='/') FAQ
-				li(href="view") Contact
+		div
+			footer(class="footer")
+			nav(class="fnav")
+				ul(class="ftext")
+					h2 SPOTT'R
+					li(href='/') About
+					li(href="view") How it works
+					li(href='/') FAQ
+					li(href="view") Contact
 
-			ul(class="ftext")
-				h2 PROFILE
-				li(href="/user/login") Login
-				li(href="/user/signup") Sign up
+				ul(class="ftext")
+					h2 PROFILE
+					li(href="/user/login") Login
+					li(href="/user/signup") Sign up
 
-			ul(class="ftext")
-				h2 CONTACT
-				li(href='/') Call 0123 - 456 789
-				li(href="view") WhatsApp +31364329074
-				li(href='/') info@spotter.com
+				ul(class="ftext")
+					h2 CONTACT
+					li(href='/') Call 0123 - 456 789
+					li(href="view") WhatsApp +31364329074
+					li(href='/') info@spotter.com
 
-			ul(class="ftext")
-				H2 SOCIAL
-				li(href="view") 
-				img(src="/images/twitter.png" id="social" href='www.twitter.com')
-				img(src="/images/facebook.png" id="social" href='www.facebook.com')
-				img(src="/images/instagram.png" id="social" href='www.instagram.com')
+				ul(class="ftext")
+					H2 SOCIAL
+					li(href="view") 
+					img(src="/images/twitter.png" id="social" href='www.twitter.com')
+					img(src="/images/facebook.png" id="social" href='www.facebook.com')
+					img(src="/images/instagram.png" id="social" href='www.instagram.com')
