--- a/views/header.pug
+++ b/views/header.pug
@@ -5,33 +5,28 @@ html
 
 	title Welcome
 	style(type='text/css').
-		li{
-
-		}
 
 	body
-		img(src="/images/logo.png" id="logo")
+		a(href="/index")
+			img(src="images/logo.png" id="logo")
+							
 		div(class="navbar")
 		nav
 			ul
-				//- img(src="images/logo.png" id="logo")
 				li
-					a(href="/" class="links") Home
 				a About
 				a How it works
 				li
 					if (user)
-						a(href="/user/profile")
+						a(href="/event/activityList") See all Events
+				li
+					if (!user)
+						a(href="/user/login")
 							img(src="/images/user.png" id="userid")
 				li
-					if (!user)
-						a(href="/user/signup") Sign Up!
-				li
-					if (!user)
-						a(href="/user/login") Log in
-				li
 					if (user)
-						a(href="/event/activityList") See all Events
+						a(href="/user/profile")
+							img(src="/images/Nienke.jpg" id="userid")
 				li
 					if (user)
 						a(href="/event/createActivity") Create an event
