--- a/views/profile.pug
+++ b/views/profile.pug
@@ -28,13 +28,18 @@ html
 				input(type="submit" placeholder="submit" name="submit")
 		p
 			a(href="/event/createActivity" class="links" id="new") Post a new message? 
-		h1 Activities
-		each message in messages
-			p  
-			br 
-			| Title: #{message.title}
-			br
-			| Message: #{message.message}
+		h1.tOne Activities
+		each activities in activities
+			p
+			div.blog  
+			ul.title 
+				p #{activities.activity}
+			ul.message
+				p #{activities.city}
+				p #{activities.description} 
+				p #{activities.meetpoint}
+				p #{activities.date} 
+				p #{activities.time}
 			//- input(type="text" value/name="#{message.id}"")
 
 		include footer.pug		
