--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,8 +65,7 @@ a{
   color: black;
   text-decoration: none;
   font-family: avenir;
-  margin-top: 30px;
-  display: inline-block;
+  display: block;
   vertical-align: top;
 
 }
@@ -78,12 +77,14 @@ a{
 /*src="images/logo.png"*/
 
 #logo{
-  /*background-image: url('/images/logo.png');*/
+  background: url('/images/logo.png') no-repeat;
   width: 11%;
   float: left;
+  padding: 5px 0 0 10px;
 }
 
 #userid{
+  background: url('/images/logo.png') no-repeat;
   width: 50px;
   padding: 0px 25px 0px 0px;
   margin-top: -15px; 
