--- a/views/createActivity.pug
+++ b/views/createActivity.pug
@@ -44,7 +44,7 @@ html
 
 		body
 			include header.pug
-			//- h1 Welcome: #{user.username}
+			h1 Welcome: #{user.username}
 			div(class='CEForm')
 			form(class="forms" id="createForm" method="POST" action="/event/createActivity")
 				h2#yourActivity Create Activity:
