--- a/views/profile.pug
+++ b/views/profile.pug
@@ -29,17 +29,21 @@ html
 		p
 			a(href="/event/createActivity" class="links" id="new") Post a new message? 
 		h1.tOne Activities
-		each activities in activities
+		each item in activities
 			p
 			div.blog  
 			ul.title 
-				p #{activities.activity}
+				p 
+				|#{item.activity}
 			ul.message
-				p #{activities.city}
-				p #{activities.description} 
-				p #{activities.meetpoint}
-				p #{activities.date} 
-				p #{activities.time}
+				p 
+				|#{item.city} 
+				p
+				| #{item.meetpoint}
+				p
+				| #{item.date} 
+				p
+				| #{item.time}
 			//- input(type="text" value/name="#{message.id}"")
 
 		include footer.pug		
