--- a/views/header.pug
+++ b/views/header.pug
@@ -7,7 +7,7 @@ html
 	style(type='text/css').
 
 	body
-		a(href="/index")
+		a(href="/" class="links")
 			img(src="images/logo.png" id="logo")
 							
 		div(class="navbar")
@@ -18,7 +18,7 @@ html
 				a How it works
 				li
 					if (user)
-						a(href="/event/activityList") See all Events
+						a(href="/event/activityList") See all activities: #{search}
 				li
 					if (!user)
 						a(href="/user/login")
@@ -26,7 +26,7 @@ html
 				li
 					if (user)
 						a(href="/user/profile")
-							img(src="/images/Nienke.jpg" id="userid")
+							img(src="/images/Nienke.png" id="userid")
 				li
 					if (user)
 						a(href="/event/createActivity") Create an event
