--- a/views/header.pug
+++ b/views/header.pug
@@ -21,7 +21,7 @@ html
 				a How it works
 				li
 					if (user)
-						a(href="/event/activityList") See all activities: #{search}
+						a(href="/event/activityList") See all activities #{search}
 				li
 					if (!user)
 						a(href="/user/login")
