--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,6 @@ html
 		link(href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel = "stylesheet")
 
 	title SPOTT'R
-	style
 	style(type='text/css').
 		.ui-autocomplete {
 			width:20%;
@@ -26,6 +25,20 @@ html
 			font-weight: bold;
 			color: grey ;
 		}
+
+		#create {
+			height: 5%;
+		}
+
+		.createEvent::after {
+			content: "Create New Event";
+			vertical-align: center;
+
+		}
+		.createEvent {	
+			float: right;
+		}
+
 	body
 	include header.pug
 
@@ -36,13 +49,13 @@ html
 				input(type='text' id='searchBar' placeholder='Where do you want to meet up?' name='title')
 				p(id='slogan') Because memories are made together.
 	img(src="images/worldmap.png" id="wmap")
+	a(href="/event/createActivity" class="links") 
+		div(class="createEvent")
+			img(src="/images/create.png" id="create")
 
 	div#search
 
 	include footer.pug
-
-
-
 
 	script.
 		$(document).ready(function() {
@@ -61,7 +74,12 @@ html
 						console.log("yeeeeea") /*when reached success, Ajax loads */	
 						$.each(result, function(index, value){
 							//console.log("values: " + value)
-							$("#search").append(`<p>${value}<p>`) /*shows data from dB*/
+							$("#search").append(`<p>${value.activity}<p>`)
+							$("#search").append(`<p>${value.meetpoint}<p>`)
+							$("#search").append(`<p>${value.date}<p>`)
+							$("#search").append(`<p>${value.time}<p>`)
+
+							/*shows data from dB*/
 						})			
 					},
 					error: function(error){
