--- a/views/login.pug
+++ b/views/login.pug
@@ -33,11 +33,10 @@ html
 			}
 			.user{
 				float: left;
-				width: 50%;
 			}
 			.user2{ 
 				float: right;
-				margin-left: 15px;
+				margin-right: 30px;
 			}
 			
 		body
