--- a/views/index.pug
+++ b/views/index.pug
@@ -53,7 +53,8 @@ html
 		div(class="createEvent")
 			img(src="/images/create.png" id="create")
 
-	div#search
+	div
+		p#search
 
 	include footer.pug
 
