--- a/views/signup.pug
+++ b/views/signup.pug
@@ -39,7 +39,7 @@ html
 	body
 		include header.pug
 		h1 Welcome, new user. 
-		h3 Please sign up to send a message:
+		h3 Please sign up to create an activity:
 		form(class="forms" method="POST" action="/user/signup")
 			p Enter a Username: 
 			input(type="text" placeholder="Username" name="username")
